# template-python-package

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
src/projectname/: __init__.py  __main__.py  version.py
src/projectname/data/: logger.ini
